# CameraCapture

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CameraCapture/: CMakeLists.txt
CameraCapture/cpp/: CameraCapture.cpp  CameraCapture.h  MVideoPlayerItem.cpp  MVideoPlayerItem.h  main.cpp
CameraCapture/qml/: main.qml
MohsenIcons/: CMakeLists.txt
MohsenIcons/MohsenIcons/: CMakeLists.txt  Drawables.js  MohsenIcons.qrc  qmldir
MohsenKit/: CMakeLists.txt
MohsenKit/MohsenKit/: CMakeLists.txt  MButton.qml  MohsenKit.qrc  qmldir
